[package]
name = "bort"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
# error propogation and backtrace management
anyhow = { version = "1.0", features = ["backtrace"] }
# ash is a lightweight vulkan wrapper
ash = "0.37"
ash-window = "0.12"
raw-window-handle = "0.5"
# AMD vulkan memory allocator bindings
vk-mem = { version = "0.2.3", git = "https://github.com/gwihlidal/vk-mem-rs", rev = "0b18c5d" }